tests/errors/default_order.vt
fn f(a: int = 1, b: int) {} fn main(){}
